# Cairn

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD-PARTY-LICENSES.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/workflows/: release.yml  test.yml
e2e/: console-guard.ts  flows.spec.ts  onboarding.spec.ts  smoke.spec.ts
e2e/fixtures/: transactions.csv
mockups/: investment-time-series.html  palette-comparison.html  v1.1-historical-backtest.html  v1.1-paycheck-calculator.html  v1.1-rent-lease.html  v1.1-trivia-learning.html
scripts/: gen-glossary-trivia.ts
scripts/hooks/: extra-test-paths.mjs  install.sh  pre-commit
src/: App.tsx  globals.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  SIGNING.md  about.hbs  about.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/options/: README.md  index.html
src-tauri/src/: db_backup.rs  db_batch.rs  lib.rs  yahoo.rs
src/components/: AssetCardParts.tsx  ErrorBoundary.tsx  ExportCsvButton.tsx
src/data/: shiller-schema.ts  shiller.ts
src/db/: boot-error-screen.ts  db.ts  init.ts  integrity.ts  migrations.ts  sqlite-adapter.ts  tauri-adapter.ts
src/dev/: seed-demo-data.ts
src/domain/: accounts.ts  app-settings.ts  asset-value-snapshots.ts  categories.ts  contributions.ts  dependents.ts  disclosure-acceptances.ts  equity-grants.ts  fund-holdings.ts  fund-sectors.ts  goals.ts  holdings.ts  household.ts  housing-payments.ts  learning-state.ts  loan-payments.ts  loans.ts  merchant-overrides.ts  merchant-seed.ts  persons.ts  properties.ts  roadmap-overrides-repo.ts  scenarios.ts  snapshots.ts  tax-rules.ts  tickers.ts  transactions.ts  vehicle-leases.ts  vehicles.ts
src/legal/: AppDisclaimerGate.tsx  DisclosureModal.tsx  DisclosureViewer.tsx  disclosures.ts  useDisclosureGate.ts
src/lib/: 529-state-deductions.ts  account-breakdown.ts  account-colors.ts  account-inclusion.ts  account-tax-classification.ts  allocation-hierarchy.ts  amortization.ts  assert.ts  asset-class-labels.ts  asset-snapshot-bucketing.ts  asset-value-chart.ts  backup-restore.ts  briefing.ts  budget-analysis.ts  business-days.ts  calculator-card-layout.ts  calculator-state.ts  calculator-visibility.ts  cashflow.ts  categorize.ts  category-config.ts  chart-colors.ts  coast-fi.ts  color.ts  compound-interest.ts  concentration.ts  contribution-allocator.ts  contribution-limits.ts  contributions-by-bucket.ts  cost-basis.ts  csv.ts  current-tax-year.ts  dates.ts  debt-payoff-comparison.ts  debt-payoff.ts  dedup.ts  entity-key.ts  equity-value.ts  expense-baseline.ts  fi-portfolio.ts  (+54 more)
src/market/: daily-snapshot.ts  fund-holdings-sync.ts  price-cache.ts  run-market-data-refresh.ts  snapshot-derivation.ts  ticker-enrichment.ts  yahoo-client.ts  yahoo-schemas.ts
src/pages/: BackupRestore.tsx  Budget.tsx  Calculators.tsx  Dashboard.tsx  EquityGrants.tsx  Goals.tsx  Investments.tsx  Learn.tsx  Loans.tsx  MonthlyMiniWindow.tsx  NetWorth.tsx  NotFound.tsx  Profile.tsx  Property.tsx  PropertyVehicles.tsx  Roadmap.tsx  Settings.tsx  Spending.tsx  SpendingTransactions.tsx  Vehicles.tsx  WhatIf.tsx
src/pdf/: detect-issuer.ts  extract.ts  layout.ts  parse-statement.ts  readable-stream-async-iterator.ts  types.ts
src/shims/: node-os.ts
src/stores/: accounts-store.ts  asset-value-snapshots-store.ts  categories-store.ts  contributions-store.ts  create-entity-store.ts  dependents-store.ts  disclosure-acceptances-store.ts  equity-grants-store.ts  fund-holdings-store.ts  fund-sectors-store.ts  goals-store.ts  holdings-store.ts  household-store.ts  housing-payments-store.ts  import-preview-store.ts  learning-state-store.ts  loan-payments-store.ts  loans-store.ts  merchant-overrides-store.ts  persons-store.ts  properties-store.ts  scenarios-store.ts  (+9 more)
tests/: TODO-CODEMOD.md  factories.test.ts  factories.ts  setup-console-policy.test.tsx  setup.ts
(+1075 files in other folders)
