[package]
name = "finance-app"
version = "0.1.0"
description = "Personal Finance Spreadsheet App"
authors = ["Raymond Gochuico"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "finance_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Yahoo quoteSummary auth (cookie pre-flight + crumb) is owned by the Rust
# shell — see `src/yahoo.rs`. The JS-side @tauri-apps/plugin-http fetch doesn't
# reliably surface Set-Cookie headers in the Tauri WebView, and re-authenticating
# per ticker hits Yahoo's rate limit. `reqwest` with `cookie_store(true)` keeps
# a single persistent session for the app's lifetime.
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
tokio = { version = "1", features = ["sync"] }
urlencoding = "2"
# `db_execute_batch` runs a list of statements on ONE pooled connection so the
# migration runner's transactions are real in prod (see src/db_batch.rs and
# src/db/tauri-adapter.ts). It reuses the EXACT same sqlx Pool<Sqlite> that
# `tauri-plugin-sql` manages in Tauri state, so versions/features must match
# the plugin's: sqlx 0.8 with the sqlite driver on the tokio runtime
# (tauri-plugin-sql's "sqlite" feature = sqlx/sqlite + sqlx/runtime-tokio).
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio"] }

[dev-dependencies]
# `#[tokio::test]` for the db_batch unit tests needs the macro + a runtime
# (the non-test build gets its runtime from Tauri). `tempfile` backs the
# shared-file SqlitePool the tests run against — see src/db_batch.rs::tests.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"

